--- a/Escola/src/main/java/view/FrAluno.form
+++ b/Escola/src/main/java/view/FrAluno.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -28,34 +28,41 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="btnNew" pref="113" max="32767" attributes="0"/>
+                      <Component id="btnNew" max="32767" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="btnEdit" pref="113" max="32767" attributes="0"/>
+                      <Component id="btnEdit" max="32767" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="btnCancel" pref="113" max="32767" attributes="0"/>
+                      <Component id="btnCancel" max="32767" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="btnDelete" pref="113" max="32767" attributes="0"/>
+                      <Component id="btnDelete" max="32767" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="btnSave" pref="113" max="32767" attributes="0"/>
+                      <Component id="btnSave" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="lblName" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblCollegeID" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblYearOfEntry" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="lblName" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblCollegeID" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="lblYearOfEntry" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="edtCollegeID" alignment="0" max="32767" attributes="0"/>
-                          <Component id="edtName" alignment="0" min="-2" pref="230" max="-2" attributes="0"/>
-                          <Component id="edtYearOfEntry" alignment="0" max="32767" attributes="0"/>
+                          <Component id="edtName" alignment="0" pref="230" max="32767" attributes="0"/>
+                          <Component id="fEdtCollegeID" max="32767" attributes="0"/>
+                          <Component id="edtYearOfEntry" alignment="0" pref="230" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="lblGender" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="lblAge" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="edtGender" alignment="0" min="-2" pref="99" max="-2" attributes="0"/>
                           <Component id="edtAge" alignment="0" min="-2" pref="99" max="-2" attributes="0"/>
@@ -87,19 +94,19 @@
                   <Component id="edtName" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="edtGender" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lblCollegeID" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lblAge" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="edtCollegeID" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="edtAge" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="fEdtCollegeID" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lblYearOfEntry" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="edtYearOfEntry" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="198" max="-2" attributes="0"/>
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
@@ -172,8 +179,6 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSaveActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="edtCollegeID">
-    </Component>
     <Component class="javax.swing.JTextField" name="edtGender">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="edtGenderActionPerformed"/>
@@ -222,7 +227,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="grdProfessor">
+        <Component class="javax.swing.JTable" name="grdAluno">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="0" rowCount="4"/>
@@ -241,6 +246,8 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Ano de Ingresso:"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JFormattedTextField" name="fEdtCollegeID">
     </Component>
     <Component class="javax.swing.JTextField" name="edtYearOfEntry">
     </Component>
